fix: update wording and fix banner visibility

--- a/frontend/src/app/views/next-gen-banner/next-gen-banner.component.scss
+++ b/frontend/src/app/views/next-gen-banner/next-gen-banner.component.scss
@@ -2,8 +2,8 @@
     position: fixed;
     top: var(--header-height);
     right: 0;
-    left: var(--header-width, var(--header-width-expand));
-    z-index: 90;
+    left: 0;
+    z-index: 10000;
     display: flex;
     align-items: center;
     justify-content: space-between;
